# liq-examples

./: .gitignore  LICENSE  README.md  pyproject.toml
src/liq/examples/: __init__.py  run_example.py  signals.py
src/liq/examples/models/: baseline.py  ema_cross.py  lgbm_model.py  linear.py  lstm_model.py
src/liq/examples/pipelines/: __init__.py  features.py  pipeline.py
src/liq/examples/strategies/: evolution_regime_presets.py  evolution_seeds.py  evolution_two_stage.py  gp_basics.py  gp_strategy_example.py  registry.py
tests/: conftest.py  test_end_to_end.py  test_feature_builder.py  test_gp_evolution_examples.py  test_models.py
